--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "serve": "gulp watch & eleventy --serve"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +13,9 @@
     "luxon": "^1.24.1"
   },
   "devDependencies": {
-    "@11ty/eleventy": "^0.11.0"
+    "@11ty/eleventy": "^0.11.0",
+    "clean-css": "^4.2.3",
+    "gulp": "^4.0.2",
+    "gulp-sass": "^4.1.0"
   }
 }
